<resources>
    <string name="app_name">Chat</string>
    <string name="welcome_to_startactivity">Welcome to StartActivity</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="passward">Passward</string>
    <string name="create_account">Create account</string>
    <string name="logout">logout</string>
    <string name="login">login</string>
    <string name="login_to_your_account">Login to your account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_changes">save changes</string>
    <string name="account_status">Account status</string>
</resources>
